[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynalloc-v2"
version = "0.8.4"
description = "Clean-slate factor-covariance dynamic allocation engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "scikit-learn>=1.3",
  "torch>=2.1",
]

[project.scripts]
dynalloc-v2 = "dynalloc_v2.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
